# Lomitus

./: .gitignore  README.md  bloom.py  contract.py  coordinator.py  dep_graph.py  pyproject.toml  test_coordinator.py  test_integration.py  watchdog.py
.claude/: settings.json
.github/workflows/: tests.yml
docs/: design.md
greenfield/: config.py  db.py  main.py
greenfield/models/: core.py
greenfield/routers/: tasks.py  users.py
lomitus/: cli.py  contract.py  coordinator.py  dep_graph.py  install.py
project/: api.py  models.py  storage.py
src/lomitus/: __main__.py  coordinator.py  dep_graph.py  watchdog.py
test-files/: api.py  calc.py  config.py  utils.py
test-thing-files/: models.py  utils.py
tests/: test_integration.py  test_unit.py
tests/fixtures/: api.py  models.py  services.py  utils.py
visualizer/: server.py
visualizer/multiagentsystem/: README.md
visualizer/multiagentsystem/project/: CBS Coordinator.html  concept-a-operator.jsx  concept-a2-operator.jsx  concept-b-overview.jsx  graph-data-dense.js  graph-data.js
visualizer/static/: app.jsx  index.html
