[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lomitus"]

[project]
name = "lomitus"
version = "0.1.0"
description = "CBS-style multi-agent coordinator for Claude Code"
readme = "README.md"
license = { text = "GPLv3" }
authors = [{ name = "Ilari Pirkkalainen", email = "ilari.pirkkalainen@gmail.com" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Utilities",
]
dependencies = ["pygit2"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
lomitus = "lomitus.cli:main"

[project.urls]
Homepage = "https://github.com/ieepirzy/Lomitus"
Source = "https://github.com/ieepirzy/Lomitus"
Issues = "https://github.com/ieepirzy/Lomitus/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
